# amanite_template_engine

./: .gitignore  .travis.yml  AmaniteConfig.cmake.in  AmaniteConfigVersion.cmake.in  CMakeLists.txt  CMakeLists.txt~  README.md  biicode.conf  biicode.conf~  chaiscriptStdlib.cpp~  chaiscriptStdlib.h~  scriptEngine.cpp~  scriptEngine.h~  stdlib.h~  templateEngine.cpp~  templateEngine.h~
amanite/: CMakeLists.txt
amanite/contexts/: CMakeLists.txt
amanite/contexts/json/: CMakeLists.txt  JsonContextAdapter.h  json11.hpp
amanite/template_engine/: CMakeLists.txt  Compiler.h  Renderer.h
amanite/tools/: CMakeLists.txt  StringUtils.h
bii/: .hive.db  policies.bii
blocks/: .travis.yml
blocks/FlorianChevassu/ATE/: CMakeLists.txt  biicode.conf
blocks/FlorianChevassu/ATE/include/amanite/template_engine/: CompiledTemplate.h  Node.h  scriptEngine.h  stdlib.h
blocks/FlorianChevassu/ATE/tests/: test1.mustache
blocks/FlorianChevassu/AmaniteTemplateEngine/include/amanite/template_engine/: EngineStateStack.h  Renderer.h  stdlib.h
blocks/FlorianChevassu/AmaniteTemplateEngine/tests/: test1.cpp
include/: ATE.h~  CMakeLists.txt  scriptEngine.h~  stdlib.h~  templateEngine.h~
include/amanite/: CMakeLists.txt
include/amanite/template_engine/: CMakeLists.txt  Compiler.h  EngineStateStack.h  Renderer.h
include/amanite/template_engine/context/: JsonContext.h
include/amanite/template_engine/contexts/: CMakeLists.txt  JsonContextAdapter.h
include/amanite/template_engine/contexts/json/: CMakeLists.txt  JsonContextAdapter.h
include/amanite/tools/: CMakeLists.txt
tests/: example.cpp~  test1.cpp  test1.cpp~  test1.mustache~
